# Woocommerce-connector

./: .gitignore  .rubocop.yml  Cargo.toml  Gemfile  README.md  docker-compose.test.yml
.github/workflows/: test.yml
spec/: spec_helper.rb  test_helper.rb
spec/actions/: create_customer_spec.rb  create_or_update_customer_spec.rb  create_or_update_product_spec.rb  delete_product_by_id_spec.rb  list_all_products_spec.rb  list_customers_spec.rb  list_orders_spec.rb  retrieve_customer_by_id_spec.rb  retrieve_order_by_id_spec.rb  retrieve_product_by_id_spec.rb  search_products_by_sku_spec.rb  search_products_spec.rb  update_customer_by_id_spec.rb  update_order_spec.rb  update_product_spec.rb
spec/triggers/: new_order_spec.rb  order_status_changed_spec.rb
src/: client.rs  lib.rs
src/actions/: mod.rs  utils.rs
src/actions/create_customer/: action.rs  base_input_schema.json  base_output_schema.json
src/actions/create_or_update_customer/: .metadata.json  action.rs  base_input_schema.json
src/actions/create_or_update_product/: .metadata.json  action.rs  base_input_schema.json
src/actions/delete_product_by_id/: .metadata.json  action.rs  base_input_schema.json  base_output_schema.json
src/actions/list_all_products/: action.rs  base_input_schema.json  base_output_schema.json
src/actions/list_customers/: .metadata.json  action.rs  base_input_schema.json  base_output_schema.json
src/actions/list_orders/: .metadata.json  action.rs  base_input_schema.json  base_output_schema.json
src/actions/retrieve_customer_by_id/: .metadata.json  (+3 more)
src/triggers/: mod.rs
(+37 files in other folders)
