[package]
name = "woocommerce_connector"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34-deprecated"
toml = "0.9.8"
wit-bindgen = "0.54.0"
chrono = { version = "0.4.44", features = ["serde"] }
once_cell = "1.21.4"
tokio = { version = "1.50.0", features = ["sync", "macros", "io-util", "rt", "time"] }
urlencoding = "2.1"

[build-dependencies]
serde_json = "1.0"
